program6_bison.output
Grammar

    0 $accept: input $end

    1 input: %empty
    2      | input classdec
    3      | error

    4 classdec: CLASS IDENTIFIER classbody

    5 classbody: LBRACE RBRACE
    6          | LBRACE vardecr RBRACE
    7          | LBRACE vardecr constructordecr RBRACE
    8          | LBRACE vardecr constructordecr methoddecr RBRACE
    9          | LBRACE constructordecr methoddecr RBRACE
   10          | LBRACE constructordecr RBRACE
   11          | LBRACE constructordecr error
   12          | LBRACE methoddecr RBRACE
   13          | LBRACE vardecr methoddecr RBRACE

   14 vardecr: vardec
   15        | vardecr vardec
   16        | vardecr error

   17 constructordecr: constructordec
   18                | constructordecr constructordec
   19                | constructordecr error

   20 methoddecr: methoddec
   21           | methoddecr methoddec
   22           | methoddecr error

   23 statement: name ASSIGNOP expression SEMICO
   24          | name LPAREN arglist RPAREN SEMICO
   25          | name LPAREN RPAREN SEMICO
   26          | PRINT LPAREN arglist RPAREN SEMICO
   27          | WHILE LPAREN expression RPAREN statement
   28          | RETURN expression SEMICO
   29          | RETURN SEMICO
   30          | SEMICO
   31          | conditionalstatement
   32          | block
   33          | name ASSIGNOP expression error
   34          | name ASSIGNOP error
   35          | PRINT LPAREN arglist RPAREN error
   36          | RETURN expression error
   37          | name LPAREN arglist RPAREN error
   38          | name LPAREN RPAREN error

   39 block: LBRACE RBRACE
   40      | LBRACE vardecr RBRACE
   41      | LBRACE vardecr statementr RBRACE
   42      | LBRACE statementr RBRACE
   43      | LBRACE error

   44 statementr: statement
   45           | statementr statement
   46           | statementr error

   47 conditionalstatement: IF LPAREN expression RPAREN statement
   48                     | IF LPAREN expression RPAREN statement ELSE statement
   49                     | IF LPAREN expression error statement
   50                     | IF LPAREN expression RPAREN error

   51 constructordec: IDENTIFIER LPAREN paramlist RPAREN block
   52               | IDENTIFIER LPAREN RPAREN block
   53               | IDENTIFIER LPAREN paramlist RPAREN error
   54               | IDENTIFIER LPAREN RPAREN error

   55 methoddec: type IDENTIFIER LPAREN paramlist RPAREN block
   56          | type IDENTIFIER LPAREN RPAREN block
   57          | VOID IDENTIFIER LPAREN paramlist RPAREN block
   58          | VOID IDENTIFIER LPAREN RPAREN block
   59          | type IDENTIFIER LPAREN paramlist RPAREN error
   60          | type IDENTIFIER LPAREN RPAREN error
   61          | VOID IDENTIFIER LPAREN paramlist RPAREN error
   62          | VOID IDENTIFIER LPAREN RPAREN error

   63 paramlist: param
   64          | paramlist COMMA param

   65 param: type IDENTIFIER

   66 vardec: type IDENTIFIER SEMICO
   67       | type IDENTIFIER error
   68       | type error SEMICO

   69 expression: NUM
   70           | NULLKEYWORD
   71           | READ LPAREN RPAREN
   72           | READ LPAREN error
   73           | unaryop expression
   74           | unaryop error
   75           | expression relationop expression
   76           | expression relationop error
   77           | expression productop expression
   78           | expression productop error
   79           | expression sumop expression
   80           | expression sumop error
   81           | LPAREN expression RPAREN
   82           | LPAREN expression error
   83           | newexpression
   84           | name
   85           | name LPAREN arglist RPAREN
   86           | name LPAREN RPAREN
   87           | name LPAREN error RPAREN
   88           | name LPAREN arglist error

   89 name: THIS
   90     | IDENTIFIER
   91     | name DOTOP IDENTIFIER
   92     | name DOTOP error
   93     | error DOTOP IDENTIFIER
   94     | name LBRACK expression RBRACK
   95     | IDENTIFIER LBRACK expression RBRACK
   96     | IDENTIFIER LBRACK expression error
   97     | name LBRACK expression error

   98 newexpression: NEW IDENTIFIER LPAREN arglist RPAREN
   99              | NEW IDENTIFIER LPAREN RPAREN
  100              | NEW IDENTIFIER LPAREN error
  101              | NEW IDENTIFIER LPAREN arglist error
  102              | NEW IDENTIFIER brackexpression
  103              | NEW IDENTIFIER multibracks
  104              | NEW IDENTIFIER brackexpression multibracks
  105              | NEW INT brackexpression
  106              | NEW INT brackexpression multibracks
  107              | NEW INT multibracks
  108              | NEW error

  109 brackexpression: LBRACK expression RBRACK
  110                | brackexpression LBRACK expression RBRACK
  111                | LBRACK expression error
  112                | brackexpression LBRACK expression error

  113 arglist: expression
  114        | arglist COMMA expression

  115 unaryop: PLUS
  116        | MINUS
  117        | NOT

  118 relationop: DOUBEQ
  119           | NOTEQ
  120           | LESSEQ
  121           | GREATEQ
  122           | LESS
  123           | GREAT

  124 productop: TIMES
  125          | DIVIDE
  126          | MOD
  127          | DOUBAND

  128 sumop: MINUS
  129      | PLUS
  130      | DOUBBAR

  131 type: INT
  132     | IDENTIFIER
  133     | INT multibracks
  134     | IDENTIFIER multibracks

  135 multibracks: LBRACK RBRACK
  136            | multibracks LBRACK RBRACK
  137            | LBRACK error
  138            | multibracks LBRACK error


Terminals, with rules where they appear

$end (0) 0
error (256) 3 11 16 19 22 33 34 35 36 37 38 43 46 49 50 53 54 59 60
    61 62 67 68 72 74 76 78 80 82 87 88 92 93 96 97 100 101 108 111
    112 137 138
CLASS (258) 4
THIS (259) 89
IF (260) 47 48 49 50
ELSE (261) 48
WHILE (262) 27
RETURN (263) 28 29 36
PRINT (264) 26 35
READ (265) 71 72
VOID (266) 57 58 61 62
NEW (267) 98 99 100 101 102 103 104 105 106 107 108
NULLKEYWORD (268) 70
INT (269) 105 106 107 131 133
ASSIGNOP (270) 23 33 34
DOTOP (271) 91 92 93
COMMA (272) 64 114
LPAREN (273) 24 25 26 27 35 37 38 47 48 49 50 51 52 53 54 55 56 57
    58 59 60 61 62 71 72 81 82 85 86 87 88 98 99 100 101
RPAREN (274) 24 25 26 27 35 37 38 47 48 50 51 52 53 54 55 56 57 58
    59 60 61 62 71 81 85 86 87 98 99
LBRACK (275) 94 95 96 97 109 110 111 112 135 136 137 138
RBRACK (276) 94 95 109 110 135 136
LBRACE (277) 5 6 7 8 9 10 11 12 13 39 40 41 42 43
RBRACE (278) 5 6 7 8 9 10 12 13 39 40 41 42
PLUS (279) 115 129
MINUS (280) 116 128
NOT (281) 117
DOUBEQ (282) 118
NOTEQ (283) 119
LESSEQ (284) 120
GREATEQ (285) 121
LESS (286) 122
GREAT (287) 123
TIMES (288) 124
DIVIDE (289) 125
MOD (290) 126
DOUBAND (291) 127
DOUBBAR (292) 130
IDENTIFIER (293) 4 51 52 53 54 55 56 57 58 59 60 61 62 65 66 67 90
    91 93 95 96 98 99 100 101 102 103 104 132 134
SEMICO (294) 23 24 25 26 28 29 30 66 68
NUM (295) 69
IFEL (296)
NAME (297)
RE (298)
BIN (299)
PRO (300)
NEG (301)


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
input (48)
    on left: 1 2 3, on right: 0 2
classdec (49)
    on left: 4, on right: 2
classbody (50)
    on left: 5 6 7 8 9 10 11 12 13, on right: 4
vardecr (51)
    on left: 14 15 16, on right: 6 7 8 13 15 16 40 41
constructordecr (52)
    on left: 17 18 19, on right: 7 8 9 10 11 18 19
methoddecr (53)
    on left: 20 21 22, on right: 8 9 12 13 21 22
statement (54)
    on left: 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38, on right:
    27 44 45 47 48 49
block (55)
    on left: 39 40 41 42 43, on right: 32 51 52 55 56 57 58
statementr (56)
    on left: 44 45 46, on right: 41 42 45 46
conditionalstatement (57)
    on left: 47 48 49 50, on right: 31
constructordec (58)
    on left: 51 52 53 54, on right: 17 18
methoddec (59)
    on left: 55 56 57 58 59 60 61 62, on right: 20 21
paramlist (60)
    on left: 63 64, on right: 51 53 55 57 59 61 64
param (61)
    on left: 65, on right: 63 64
vardec (62)
    on left: 66 67 68, on right: 14 15
expression (63)
    on left: 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86
    87 88, on right: 23 27 28 33 36 47 48 49 50 73 75 76 77 78 79 80
    81 82 94 95 96 97 109 110 111 112 113 114
name (64)
    on left: 89 90 91 92 93 94 95 96 97, on right: 23 24 25 33 34 37
    38 84 85 86 87 88 91 92 94 97
newexpression (65)
    on left: 98 99 100 101 102 103 104 105 106 107 108, on right: 83
brackexpression (66)
    on left: 109 110 111 112, on right: 102 104 105 106 110 112
arglist (67)
    on left: 113 114, on right: 24 26 35 37 85 88 98 101 114
unaryop (68)
    on left: 115 116 117, on right: 73 74
relationop (69)
    on left: 118 119 120 121 122 123, on right: 75 76
productop (70)
    on left: 124 125 126 127, on right: 77 78
sumop (71)
    on left: 128 129 130, on right: 79 80
type (72)
    on left: 131 132 133 134, on right: 55 56 59 60 65 66 67 68
multibracks (73)
    on left: 135 136 137 138, on right: 103 104 106 107 133 134 136
    138


State 0

    0 $accept: . input $end

    error  shift, and go to state 1

    $end   reduce using rule 1 (input)
    CLASS  reduce using rule 1 (input)

    input  go to state 2


State 1

    3 input: error .

    $default  reduce using rule 3 (input)


State 2

    0 $accept: input . $end
    2 input: input . classdec

    $end   shift, and go to state 3
    CLASS  shift, and go to state 4

    classdec  go to state 5


State 3

    0 $accept: input $end .

    $default  accept


State 4

    4 classdec: CLASS . IDENTIFIER classbody

    IDENTIFIER  shift, and go to state 6


State 5

    2 input: input classdec .

    $default  reduce using rule 2 (input)


State 6

    4 classdec: CLASS IDENTIFIER . classbody

    LBRACE  shift, and go to state 7

    classbody  go to state 8


State 7

    5 classbody: LBRACE . RBRACE
    6          | LBRACE . vardecr RBRACE
    7          | LBRACE . vardecr constructordecr RBRACE
    8          | LBRACE . vardecr constructordecr methoddecr RBRACE
    9          | LBRACE . constructordecr methoddecr RBRACE
   10          | LBRACE . constructordecr RBRACE
   11          | LBRACE . constructordecr error
   12          | LBRACE . methoddecr RBRACE
   13          | LBRACE . vardecr methoddecr RBRACE

    VOID        shift, and go to state 9
    INT         shift, and go to state 10
    RBRACE      shift, and go to state 11
    IDENTIFIER  shift, and go to state 12

    vardecr          go to state 13
    constructordecr  go to state 14
    methoddecr       go to state 15
    constructordec   go to state 16
    methoddec        go to state 17
    vardec           go to state 18
    type             go to state 19


State 8

    4 classdec: CLASS IDENTIFIER classbody .

    $default  reduce using rule 4 (classdec)


State 9

   57 methoddec: VOID . IDENTIFIER LPAREN paramlist RPAREN block
   58          | VOID . IDENTIFIER LPAREN RPAREN block
   61          | VOID . IDENTIFIER LPAREN paramlist RPAREN error
   62          | VOID . IDENTIFIER LPAREN RPAREN error

    IDENTIFIER  shift, and go to state 20


State 10

  131 type: INT .
  133     | INT . multibracks

    LBRACK  shift, and go to state 21

    $default  reduce using rule 131 (type)

    multibracks  go to state 22


State 11

    5 classbody: LBRACE RBRACE .

    $default  reduce using rule 5 (classbody)


State 12

   51 constructordec: IDENTIFIER . LPAREN paramlist RPAREN block
   52               | IDENTIFIER . LPAREN RPAREN block
   53               | IDENTIFIER . LPAREN paramlist RPAREN error
   54               | IDENTIFIER . LPAREN RPAREN error
  132 type: IDENTIFIER .
  134     | IDENTIFIER . multibracks

    LPAREN  shift, and go to state 23
    LBRACK  shift, and go to state 21

    $default  reduce using rule 132 (type)

    multibracks  go to state 24


State 13

    6 classbody: LBRACE vardecr . RBRACE
    7          | LBRACE vardecr . constructordecr RBRACE
    8          | LBRACE vardecr . constructordecr methoddecr RBRACE
   13          | LBRACE vardecr . methoddecr RBRACE
   15 vardecr: vardecr . vardec
   16        | vardecr . error

    error       shift, and go to state 25
    VOID        shift, and go to state 9
    INT         shift, and go to state 10
    RBRACE      shift, and go to state 26
    IDENTIFIER  shift, and go to state 12

    constructordecr  go to state 27
    methoddecr       go to state 28
    constructordec   go to state 16
    methoddec        go to state 17
    vardec           go to state 29
    type             go to state 19


State 14

    9 classbody: LBRACE constructordecr . methoddecr RBRACE
   10          | LBRACE constructordecr . RBRACE
   11          | LBRACE constructordecr . error
   18 constructordecr: constructordecr . constructordec
   19                | constructordecr . error

    error       shift, and go to state 30
    VOID        shift, and go to state 9
    INT         shift, and go to state 10
    RBRACE      shift, and go to state 31
    IDENTIFIER  shift, and go to state 12

    methoddecr      go to state 32
    constructordec  go to state 33
    methoddec       go to state 17
    type            go to state 34


State 15

   12 classbody: LBRACE methoddecr . RBRACE
   21 methoddecr: methoddecr . methoddec
   22           | methoddecr . error

    error       shift, and go to state 35
    VOID        shift, and go to state 9
    INT         shift, and go to state 10
    RBRACE      shift, and go to state 36
    IDENTIFIER  shift, and go to state 37

    methoddec  go to state 38
    type       go to state 34


State 16

   17 constructordecr: constructordec .

    $default  reduce using rule 17 (constructordecr)


State 17

   20 methoddecr: methoddec .

    $default  reduce using rule 20 (methoddecr)


State 18

   14 vardecr: vardec .

    $default  reduce using rule 14 (vardecr)


State 19

   55 methoddec: type . IDENTIFIER LPAREN paramlist RPAREN block
   56          | type . IDENTIFIER LPAREN RPAREN block
   59          | type . IDENTIFIER LPAREN paramlist RPAREN error
   60          | type . IDENTIFIER LPAREN RPAREN error
   66 vardec: type . IDENTIFIER SEMICO
   67       | type . IDENTIFIER error
   68       | type . error SEMICO

    error       shift, and go to state 39
    IDENTIFIER  shift, and go to state 40


State 20

   57 methoddec: VOID IDENTIFIER . LPAREN paramlist RPAREN block
   58          | VOID IDENTIFIER . LPAREN RPAREN block
   61          | VOID IDENTIFIER . LPAREN paramlist RPAREN error
   62          | VOID IDENTIFIER . LPAREN RPAREN error

    LPAREN  shift, and go to state 41


State 21

  135 multibracks: LBRACK . RBRACK
  137            | LBRACK . error

    error   shift, and go to state 42
    RBRACK  shift, and go to state 43


State 22

  133 type: INT multibracks .
  136 multibracks: multibracks . LBRACK RBRACK
  138            | multibracks . LBRACK error

    LBRACK  shift, and go to state 44

    $default  reduce using rule 133 (type)


State 23

   51 constructordec: IDENTIFIER LPAREN . paramlist RPAREN block
   52               | IDENTIFIER LPAREN . RPAREN block
   53               | IDENTIFIER LPAREN . paramlist RPAREN error
   54               | IDENTIFIER LPAREN . RPAREN error

    INT         shift, and go to state 10
    RPAREN      shift, and go to state 45
    IDENTIFIER  shift, and go to state 37

    paramlist  go to state 46
    param      go to state 47
    type       go to state 48


State 24

  134 type: IDENTIFIER multibracks .
  136 multibracks: multibracks . LBRACK RBRACK
  138            | multibracks . LBRACK error

    LBRACK  shift, and go to state 44

    $default  reduce using rule 134 (type)


State 25

   16 vardecr: vardecr error .

    $default  reduce using rule 16 (vardecr)


State 26

    6 classbody: LBRACE vardecr RBRACE .

    $default  reduce using rule 6 (classbody)


State 27

    7 classbody: LBRACE vardecr constructordecr . RBRACE
    8          | LBRACE vardecr constructordecr . methoddecr RBRACE
   18 constructordecr: constructordecr . constructordec
   19                | constructordecr . error

    error       shift, and go to state 49
    VOID        shift, and go to state 9
    INT         shift, and go to state 10
    RBRACE      shift, and go to state 50
    IDENTIFIER  shift, and go to state 12

    methoddecr      go to state 51
    constructordec  go to state 33
    methoddec       go to state 17
    type            go to state 34


State 28

   13 classbody: LBRACE vardecr methoddecr . RBRACE
   21 methoddecr: methoddecr . methoddec
   22           | methoddecr . error

    error       shift, and go to state 35
    VOID        shift, and go to state 9
    INT         shift, and go to state 10
    RBRACE      shift, and go to state 52
    IDENTIFIER  shift, and go to state 37

    methoddec  go to state 38
    type       go to state 34


State 29

   15 vardecr: vardecr vardec .

    $default  reduce using rule 15 (vardecr)


State 30

   11 classbody: LBRACE constructordecr error .
   19 constructordecr: constructordecr error .

    $end      reduce using rule 11 (classbody)
    CLASS     reduce using rule 11 (classbody)
    $default  reduce using rule 19 (constructordecr)


State 31

   10 classbody: LBRACE constructordecr RBRACE .

    $default  reduce using rule 10 (classbody)


State 32

    9 classbody: LBRACE constructordecr methoddecr . RBRACE
   21 methoddecr: methoddecr . methoddec
   22           | methoddecr . error

    error       shift, and go to state 35
    VOID        shift, and go to state 9
    INT         shift, and go to state 10
    RBRACE      shift, and go to state 53
    IDENTIFIER  shift, and go to state 37

    methoddec  go to state 38
    type       go to state 34


State 33

   18 constructordecr: constructordecr constructordec .

    $default  reduce using rule 18 (constructordecr)


State 34

   55 methoddec: type . IDENTIFIER LPAREN paramlist RPAREN block
   56          | type . IDENTIFIER LPAREN RPAREN block
   59          | type . IDENTIFIER LPAREN paramlist RPAREN error
   60          | type . IDENTIFIER LPAREN RPAREN error

    IDENTIFIER  shift, and go to state 54


State 35

   22 methoddecr: methoddecr error .

    $default  reduce using rule 22 (methoddecr)


State 36

   12 classbody: LBRACE methoddecr RBRACE .

    $default  reduce using rule 12 (classbody)


State 37

  132 type: IDENTIFIER .
  134     | IDENTIFIER . multibracks

    LBRACK  shift, and go to state 21

    $default  reduce using rule 132 (type)

    multibracks  go to state 24


State 38

   21 methoddecr: methoddecr methoddec .

    $default  reduce using rule 21 (methoddecr)


State 39

   68 vardec: type error . SEMICO

    SEMICO  shift, and go to state 55


State 40

   55 methoddec: type IDENTIFIER . LPAREN paramlist RPAREN block
   56          | type IDENTIFIER . LPAREN RPAREN block
   59          | type IDENTIFIER . LPAREN paramlist RPAREN error
   60          | type IDENTIFIER . LPAREN RPAREN error
   66 vardec: type IDENTIFIER . SEMICO
   67       | type IDENTIFIER . error

    error   shift, and go to state 56
    LPAREN  shift, and go to state 57
    SEMICO  shift, and go to state 58


State 41

   57 methoddec: VOID IDENTIFIER LPAREN . paramlist RPAREN block
   58          | VOID IDENTIFIER LPAREN . RPAREN block
   61          | VOID IDENTIFIER LPAREN . paramlist RPAREN error
   62          | VOID IDENTIFIER LPAREN . RPAREN error

    INT         shift, and go to state 10
    RPAREN      shift, and go to state 59
    IDENTIFIER  shift, and go to state 37

    paramlist  go to state 60
    param      go to state 47
    type       go to state 48


State 42

  137 multibracks: LBRACK error .

    $default  reduce using rule 137 (multibracks)


State 43

  135 multibracks: LBRACK RBRACK .

    $default  reduce using rule 135 (multibracks)


State 44

  136 multibracks: multibracks LBRACK . RBRACK
  138            | multibracks LBRACK . error

    error   shift, and go to state 61
    RBRACK  shift, and go to state 62


State 45

   52 constructordec: IDENTIFIER LPAREN RPAREN . block
   54               | IDENTIFIER LPAREN RPAREN . error

    error   shift, and go to state 63
    LBRACE  shift, and go to state 64

    block  go to state 65


State 46

   51 constructordec: IDENTIFIER LPAREN paramlist . RPAREN block
   53               | IDENTIFIER LPAREN paramlist . RPAREN error
   64 paramlist: paramlist . COMMA param

    COMMA   shift, and go to state 66
    RPAREN  shift, and go to state 67


State 47

   63 paramlist: param .

    $default  reduce using rule 63 (paramlist)


State 48

   65 param: type . IDENTIFIER

    IDENTIFIER  shift, and go to state 68


State 49

   19 constructordecr: constructordecr error .

    $default  reduce using rule 19 (constructordecr)


State 50

    7 classbody: LBRACE vardecr constructordecr RBRACE .

    $default  reduce using rule 7 (classbody)


State 51

    8 classbody: LBRACE vardecr constructordecr methoddecr . RBRACE
   21 methoddecr: methoddecr . methoddec
   22           | methoddecr . error

    error       shift, and go to state 35
    VOID        shift, and go to state 9
    INT         shift, and go to state 10
    RBRACE      shift, and go to state 69
    IDENTIFIER  shift, and go to state 37

    methoddec  go to state 38
    type       go to state 34


State 52

   13 classbody: LBRACE vardecr methoddecr RBRACE .

    $default  reduce using rule 13 (classbody)


State 53

    9 classbody: LBRACE constructordecr methoddecr RBRACE .

    $default  reduce using rule 9 (classbody)


State 54

   55 methoddec: type IDENTIFIER . LPAREN paramlist RPAREN block
   56          | type IDENTIFIER . LPAREN RPAREN block
   59          | type IDENTIFIER . LPAREN paramlist RPAREN error
   60          | type IDENTIFIER . LPAREN RPAREN error

    LPAREN  shift, and go to state 57


State 55

   68 vardec: type error SEMICO .

    $default  reduce using rule 68 (vardec)


State 56

   67 vardec: type IDENTIFIER error .

    $default  reduce using rule 67 (vardec)


State 57

   55 methoddec: type IDENTIFIER LPAREN . paramlist RPAREN block
   56          | type IDENTIFIER LPAREN . RPAREN block
   59          | type IDENTIFIER LPAREN . paramlist RPAREN error
   60          | type IDENTIFIER LPAREN . RPAREN error

    INT         shift, and go to state 10
    RPAREN      shift, and go to state 70
    IDENTIFIER  shift, and go to state 37

    paramlist  go to state 71
    param      go to state 47
    type       go to state 48


State 58

   66 vardec: type IDENTIFIER SEMICO .

    $default  reduce using rule 66 (vardec)


State 59

   58 methoddec: VOID IDENTIFIER LPAREN RPAREN . block
   62          | VOID IDENTIFIER LPAREN RPAREN . error

    error   shift, and go to state 72
    LBRACE  shift, and go to state 64

    block  go to state 73


State 60

   57 methoddec: VOID IDENTIFIER LPAREN paramlist . RPAREN block
   61          | VOID IDENTIFIER LPAREN paramlist . RPAREN error
   64 paramlist: paramlist . COMMA param

    COMMA   shift, and go to state 66
    RPAREN  shift, and go to state 74


State 61

  138 multibracks: multibracks LBRACK error .

    $default  reduce using rule 138 (multibracks)


State 62

  136 multibracks: multibracks LBRACK RBRACK .

    $default  reduce using rule 136 (multibracks)


State 63

   54 constructordec: IDENTIFIER LPAREN RPAREN error .

    $default  reduce using rule 54 (constructordec)


State 64

   39 block: LBRACE . RBRACE
   40      | LBRACE . vardecr RBRACE
   41      | LBRACE . vardecr statementr RBRACE
   42      | LBRACE . statementr RBRACE
   43      | LBRACE . error

    error       shift, and go to state 75
    THIS        shift, and go to state 76
    IF          shift, and go to state 77
    WHILE       shift, and go to state 78
    RETURN      shift, and go to state 79
    PRINT       shift, and go to state 80
    INT         shift, and go to state 10
    LBRACE      shift, and go to state 64
    RBRACE      shift, and go to state 81
    IDENTIFIER  shift, and go to state 82
    SEMICO      shift, and go to state 83

    vardecr               go to state 84
    statement             go to state 85
    block                 go to state 86
    statementr            go to state 87
    conditionalstatement  go to state 88
    vardec                go to state 18
    name                  go to state 89
    type                  go to state 90


State 65

   52 constructordec: IDENTIFIER LPAREN RPAREN block .

    $default  reduce using rule 52 (constructordec)


State 66

   64 paramlist: paramlist COMMA . param

    INT         shift, and go to state 10
    IDENTIFIER  shift, and go to state 37

    param  go to state 91
    type   go to state 48


State 67

   51 constructordec: IDENTIFIER LPAREN paramlist RPAREN . block
   53               | IDENTIFIER LPAREN paramlist RPAREN . error

    error   shift, and go to state 92
    LBRACE  shift, and go to state 64

    block  go to state 93


State 68

   65 param: type IDENTIFIER .

    $default  reduce using rule 65 (param)


State 69

    8 classbody: LBRACE vardecr constructordecr methoddecr RBRACE .

    $default  reduce using rule 8 (classbody)


State 70

   56 methoddec: type IDENTIFIER LPAREN RPAREN . block
   60          | type IDENTIFIER LPAREN RPAREN . error

    error   shift, and go to state 94
    LBRACE  shift, and go to state 64

    block  go to state 95


State 71

   55 methoddec: type IDENTIFIER LPAREN paramlist . RPAREN block
   59          | type IDENTIFIER LPAREN paramlist . RPAREN error
   64 paramlist: paramlist . COMMA param

    COMMA   shift, and go to state 66
    RPAREN  shift, and go to state 96


State 72

   62 methoddec: VOID IDENTIFIER LPAREN RPAREN error .

    $default  reduce using rule 62 (methoddec)


State 73

   58 methoddec: VOID IDENTIFIER LPAREN RPAREN block .

    $default  reduce using rule 58 (methoddec)


State 74

   57 methoddec: VOID IDENTIFIER LPAREN paramlist RPAREN . block
   61          | VOID IDENTIFIER LPAREN paramlist RPAREN . error

    error   shift, and go to state 97
    LBRACE  shift, and go to state 64

    block  go to state 98


State 75

   43 block: LBRACE error .
   93 name: error . DOTOP IDENTIFIER

    DOTOP  shift, and go to state 99

    $default  reduce using rule 43 (block)


State 76

   89 name: THIS .

    $default  reduce using rule 89 (name)


State 77

   47 conditionalstatement: IF . LPAREN expression RPAREN statement
   48                     | IF . LPAREN expression RPAREN statement ELSE statement
   49                     | IF . LPAREN expression error statement
   50                     | IF . LPAREN expression RPAREN error

    LPAREN  shift, and go to state 100


State 78

   27 statement: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 101


State 79

   28 statement: RETURN . expression SEMICO
   29          | RETURN . SEMICO
   36          | RETURN . expression error

    error        shift, and go to state 102
    THIS         shift, and go to state 76
    READ         shift, and go to state 103
    NEW          shift, and go to state 104
    NULLKEYWORD  shift, and go to state 105
    LPAREN       shift, and go to state 106
    PLUS         shift, and go to state 107
    MINUS        shift, and go to state 108
    NOT          shift, and go to state 109
    IDENTIFIER   shift, and go to state 110
    SEMICO       shift, and go to state 111
    NUM          shift, and go to state 112

    expression     go to state 113
    name           go to state 114
    newexpression  go to state 115
    unaryop        go to state 116


State 80

   26 statement: PRINT . LPAREN arglist RPAREN SEMICO
   35          | PRINT . LPAREN arglist RPAREN error

    LPAREN  shift, and go to state 117


State 81

   39 block: LBRACE RBRACE .

    $default  reduce using rule 39 (block)


State 82

   90 name: IDENTIFIER .
   95     | IDENTIFIER . LBRACK expression RBRACK
   96     | IDENTIFIER . LBRACK expression error
  132 type: IDENTIFIER .
  134     | IDENTIFIER . multibracks

    LBRACK  shift, and go to state 118

    error       reduce using rule 132 (type)
    IDENTIFIER  reduce using rule 132 (type)
    $default    reduce using rule 90 (name)

    multibracks  go to state 24


State 83

   30 statement: SEMICO .

    $default  reduce using rule 30 (statement)


State 84

   15 vardecr: vardecr . vardec
   16        | vardecr . error
   40 block: LBRACE vardecr . RBRACE
   41      | LBRACE vardecr . statementr RBRACE

    error       shift, and go to state 119
    THIS        shift, and go to state 76
    IF          shift, and go to state 77
    WHILE       shift, and go to state 78
    RETURN      shift, and go to state 79
    PRINT       shift, and go to state 80
    INT         shift, and go to state 10
    LBRACE      shift, and go to state 64
    RBRACE      shift, and go to state 120
    IDENTIFIER  shift, and go to state 82
    SEMICO      shift, and go to state 83

    statement             go to state 85
    block                 go to state 86
    statementr            go to state 121
    conditionalstatement  go to state 88
    vardec                go to state 29
    name                  go to state 89
    type                  go to state 90


State 85

   44 statementr: statement .

    $default  reduce using rule 44 (statementr)


State 86

   32 statement: block .

    $default  reduce using rule 32 (statement)


State 87

   42 block: LBRACE statementr . RBRACE
   45 statementr: statementr . statement
   46           | statementr . error

    error       shift, and go to state 122
    THIS        shift, and go to state 76
    IF          shift, and go to state 77
    WHILE       shift, and go to state 78
    RETURN      shift, and go to state 79
    PRINT       shift, and go to state 80
    LBRACE      shift, and go to state 64
    RBRACE      shift, and go to state 123
    IDENTIFIER  shift, and go to state 110
    SEMICO      shift, and go to state 83

    statement             go to state 124
    block                 go to state 86
    conditionalstatement  go to state 88
    name                  go to state 89


State 88

   31 statement: conditionalstatement .

    $default  reduce using rule 31 (statement)


State 89

   23 statement: name . ASSIGNOP expression SEMICO
   24          | name . LPAREN arglist RPAREN SEMICO
   25          | name . LPAREN RPAREN SEMICO
   33          | name . ASSIGNOP expression error
   34          | name . ASSIGNOP error
   37          | name . LPAREN arglist RPAREN error
   38          | name . LPAREN RPAREN error
   91 name: name . DOTOP IDENTIFIER
   92     | name . DOTOP error
   94     | name . LBRACK expression RBRACK
   97     | name . LBRACK expression error

    ASSIGNOP  shift, and go to state 125
    DOTOP     shift, and go to state 126
    LPAREN    shift, and go to state 127
    LBRACK    shift, and go to state 128


State 90

   66 vardec: type . IDENTIFIER SEMICO
   67       | type . IDENTIFIER error
   68       | type . error SEMICO

    error       shift, and go to state 39
    IDENTIFIER  shift, and go to state 129


State 91

   64 paramlist: paramlist COMMA param .

    $default  reduce using rule 64 (paramlist)


State 92

   53 constructordec: IDENTIFIER LPAREN paramlist RPAREN error .

    $default  reduce using rule 53 (constructordec)


State 93

   51 constructordec: IDENTIFIER LPAREN paramlist RPAREN block .

    $default  reduce using rule 51 (constructordec)


State 94

   60 methoddec: type IDENTIFIER LPAREN RPAREN error .

    $default  reduce using rule 60 (methoddec)


State 95

   56 methoddec: type IDENTIFIER LPAREN RPAREN block .

    $default  reduce using rule 56 (methoddec)


State 96

   55 methoddec: type IDENTIFIER LPAREN paramlist RPAREN . block
   59          | type IDENTIFIER LPAREN paramlist RPAREN . error

    error   shift, and go to state 130
    LBRACE  shift, and go to state 64

    block  go to state 131


State 97

   61 methoddec: VOID IDENTIFIER LPAREN paramlist RPAREN error .

    $default  reduce using rule 61 (methoddec)


State 98

   57 methoddec: VOID IDENTIFIER LPAREN paramlist RPAREN block .

    $default  reduce using rule 57 (methoddec)


State 99

   93 name: error DOTOP . IDENTIFIER

    IDENTIFIER  shift, and go to state 132


State 100

   47 conditionalstatement: IF LPAREN . expression RPAREN statement
   48                     | IF LPAREN . expression RPAREN statement ELSE statement
   49                     | IF LPAREN . expression error statement
   50                     | IF LPAREN . expression RPAREN error

    error        shift, and go to state 102
    THIS         shift, and go to state 76
    READ         shift, and go to state 103
    NEW          shift, and go to state 104
    NULLKEYWORD  shift, and go to state 105
    LPAREN       shift, and go to state 106
    PLUS         shift, and go to state 107
    MINUS        shift, and go to state 108
    NOT          shift, and go to state 109
    IDENTIFIER   shift, and go to state 110
    NUM          shift, and go to state 112

    expression     go to state 133
    name           go to state 114
    newexpression  go to state 115
    unaryop        go to state 116


State 101

   27 statement: WHILE LPAREN . expression RPAREN statement

    error        shift, and go to state 102
    THIS         shift, and go to state 76
    READ         shift, and go to state 103
    NEW          shift, and go to state 104
    NULLKEYWORD  shift, and go to state 105
    LPAREN       shift, and go to state 106
    PLUS         shift, and go to state 107
    MINUS        shift, and go to state 108
    NOT          shift, and go to state 109
    IDENTIFIER   shift, and go to state 110
    NUM          shift, and go to state 112

    expression     go to state 134
    name           go to state 114
    newexpression  go to state 115
    unaryop        go to state 116


State 102

   93 name: error . DOTOP IDENTIFIER

    DOTOP  shift, and go to state 99


State 103

   71 expression: READ . LPAREN RPAREN
   72           | READ . LPAREN error

    LPAREN  shift, and go to state 135


State 104

   98 newexpression: NEW . IDENTIFIER LPAREN arglist RPAREN
   99              | NEW . IDENTIFIER LPAREN RPAREN
  100              | NEW . IDENTIFIER LPAREN error
  101              | NEW . IDENTIFIER LPAREN arglist error
  102              | NEW . IDENTIFIER brackexpression
  103              | NEW . IDENTIFIER multibracks
  104              | NEW . IDENTIFIER brackexpression multibracks
  105              | NEW . INT brackexpression
  106              | NEW . INT brackexpression multibracks
  107              | NEW . INT multibracks
  108              | NEW . error

    error       shift, and go to state 136
    INT         shift, and go to state 137
    IDENTIFIER  shift, and go to state 138


State 105

   70 expression: NULLKEYWORD .

    $default  reduce using rule 70 (expression)


State 106

   81 expression: LPAREN . expression RPAREN
   82           | LPAREN . expression error
